[gd_scene load_steps=22 format=3 uid="uid://dew8rdjqh7og2"]

[ext_resource type="Script" path="res://Scenes/game_scene.gd" id="1_7qcci"]
[ext_resource type="PackedScene" uid="uid://b1c8msk3p2gkp" path="res://Objects/dummy.tscn" id="1_w4v2a"]
[ext_resource type="Texture2D" uid="uid://bn7rjh8fqxnlu" path="res://icon.svg" id="2_ipkcv"]
[ext_resource type="Script" path="res://Scenes/UI.gd" id="3_2llna"]
[ext_resource type="Texture2D" uid="uid://rmo2fj6q20xl" path="res://Scenes/Background.jpg" id="5_oiqdb"]
[ext_resource type="Texture2D" uid="uid://b7vkjialh8ic1" path="res://Objects/Player.png" id="5_xf3av"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmhbl"]
size = Vector2(2400, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dce8l"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.556863)
skew = Vector2(-0.76, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_88kwp"]
bg_color = Color(0.364706, 0.698039, 0.156863, 1)
skew = Vector2(-0.76, 0)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufru0"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.556863)
skew = Vector2(-0.76, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c088"]
bg_color = Color(0.254902, 0.670588, 0.909804, 1)
skew = Vector2(-0.76, 0)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cj7q"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.556863)
skew = Vector2(0.76, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dme0w"]
bg_color = Color(0.364706, 0.698039, 0.156863, 1)
skew = Vector2(0.76, 0)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dmimc"]
bg_color = Color(0.117647, 0.117647, 0.117647, 0.556863)
skew = Vector2(0.76, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6me2b"]
bg_color = Color(0.847059, 0.67451, 0, 1)
skew = Vector2(0.76, 0)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nucmr"]
bg_color = Color(0.231373, 0.231373, 0.231373, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.803922, 0.25098, 0.14902, 1)
corner_radius_top_right = 500
corner_radius_bottom_right = 500
corner_detail = 1

[sub_resource type="AtlasTexture" id="AtlasTexture_ssqsg"]
atlas = ExtResource("5_xf3av")
region = Rect2(-3.10782, -4.84078, 69.9761, 75.4894)

[sub_resource type="LabelSettings" id="LabelSettings_aqwfg"]
font_size = 46
outline_size = 32
outline_color = Color(0.803922, 0.25098, 0.14902, 1)

[sub_resource type="Animation" id="Animation_vhbis"]
resource_name = "left_ulti"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ulti:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-800, 22.5), Vector2(0, 22.5), Vector2(50, 22.5), Vector2(0, 22.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ulti:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ulti:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u7576"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ulti:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 22.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Ulti:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ulti:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rj1ji"]
_data = {
"RESET": SubResource("Animation_u7576"),
"left_ulti": SubResource("Animation_vhbis")
}

[node name="GameScene" type="Node2D"]
script = ExtResource("1_7qcci")

[node name="Dummy" parent="." node_paths=PackedStringArray("enemy_player") instance=ExtResource("1_w4v2a")]
position = Vector2(256, 403)
SPEED = 500.0
JUMP_VELOCITY = -1000.0
id = 1
enemy_player = NodePath("../Dummy2")
player_layer = 1
attack_layer = 3
enemy_layer = 4

[node name="Dummy2" parent="." node_paths=PackedStringArray("enemy_player") instance=ExtResource("1_w4v2a")]
position = Vector2(886, 413)
SPEED = 500.0
JUMP_VELOCITY = -1400.0
id = 2
enemy_player = NodePath("../Dummy")
player_layer = 4
attack_layer = 5
enemy_layer = 1

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(590, 664)
collision_layer = 2
collision_mask = 9

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
scale = Vector2(18.7031, 1)
texture = ExtResource("2_ipkcv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_pmhbl")

[node name="Floor2" type="StaticBody2D" parent="."]
position = Vector2(1218, 509)
rotation = -1.5708
collision_layer = 2
collision_mask = 9

[node name="Sprite2D" type="Sprite2D" parent="Floor2"]
scale = Vector2(18.7031, 1)
texture = ExtResource("2_ipkcv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor2"]
shape = SubResource("RectangleShape2D_pmhbl")

[node name="Floor3" type="StaticBody2D" parent="."]
position = Vector2(-64, 504)
rotation = -1.5708
collision_layer = 2
collision_mask = 9

[node name="Sprite2D" type="Sprite2D" parent="Floor3"]
scale = Vector2(18.7031, 1)
texture = ExtResource("2_ipkcv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor3"]
shape = SubResource("RectangleShape2D_pmhbl")

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_2llna")

[node name="Main" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar1" type="ProgressBar" parent="UI/Main"]
layout_mode = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 422.0
offset_bottom = 45.0
theme_override_styles/background = SubResource("StyleBoxFlat_dce8l")
theme_override_styles/fill = SubResource("StyleBoxFlat_88kwp")
step = 1.0
value = 100.0
show_percentage = false

[node name="GuardStaminaBar1" type="ProgressBar" parent="UI/Main"]
layout_mode = 0
offset_left = 48.0
offset_top = 56.0
offset_right = 252.0
offset_bottom = 73.0
theme_override_styles/background = SubResource("StyleBoxFlat_ufru0")
theme_override_styles/fill = SubResource("StyleBoxFlat_7c088")
max_value = 50.0
value = 50.0
show_percentage = false

[node name="HealthBar2" type="ProgressBar" parent="UI/Main"]
layout_mode = 0
offset_left = 728.0
offset_top = 16.0
offset_right = 1126.0
offset_bottom = 45.0
theme_override_styles/background = SubResource("StyleBoxFlat_0cj7q")
theme_override_styles/fill = SubResource("StyleBoxFlat_dme0w")
step = 1.0
value = 100.0
fill_mode = 1
show_percentage = false

[node name="GuardStaminaBar2" type="ProgressBar" parent="UI/Main"]
layout_mode = 0
offset_left = 904.0
offset_top = 56.0
offset_right = 1108.0
offset_bottom = 73.0
theme_override_styles/background = SubResource("StyleBoxFlat_dmimc")
theme_override_styles/fill = SubResource("StyleBoxFlat_6me2b")
max_value = 50.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Ulti" type="Control" parent="UI/Main"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 22.5
offset_right = 361.0
offset_bottom = 625.5
grow_vertical = 2

[node name="Panel" type="Panel" parent="UI/Main/Ulti"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nucmr")

[node name="TextureRect" type="TextureRect" parent="UI/Main/Ulti/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.5
offset_top = -229.0
offset_right = 58.5
offset_bottom = 133.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_ssqsg")
stretch_mode = 5

[node name="Label" type="Label" parent="UI/Main/Ulti/Panel"]
layout_mode = 0
offset_left = 29.0
offset_top = 361.5
offset_right = 217.0
offset_bottom = 428.5
text = "COMELA"
label_settings = SubResource("LabelSettings_aqwfg")

[node name="Anim" type="AnimationPlayer" parent="UI/Main"]
libraries = {
"": SubResource("AnimationLibrary_rj1ji")
}

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("5_oiqdb")
centered = false

[connection signal="end_round" from="." to="UI" method="_on_game_scene_end_round"]
[connection signal="dead" from="Dummy" to="." method="_on_dummy_dead"]
[connection signal="guard_stamina_update" from="Dummy" to="UI" method="_on_dummy_guard_stamina_update"]
[connection signal="hp_update" from="Dummy" to="UI" method="_on_dummy_hp_update"]
[connection signal="dead" from="Dummy2" to="." method="_on_dummy_2_dead"]
[connection signal="guard_stamina_update" from="Dummy2" to="UI" method="_on_dummy_2_guard_stamina_update"]
[connection signal="hp_update" from="Dummy2" to="UI" method="_on_dummy_2_hp_update"]
